# PseudoSpectral1DChain

./: CMakeLists.txt  FieldMethod.h  Propagator.cpp  Propagator.h  README.md  SCFT.cpp  SCFT.h  main.cpp  mathutils.h  qAPropagator.cpp  qAPropagator.h  qBPropagator.cpp  qBPropagator.h  qDaggerPropagator.cpp  qDaggerPropagator.h  qPropagator.cpp  qPropagator.h
.github/workflows/: cmake.yml
